UCL-22 Fix margin on safari for <button/>

--- a/src/Button/BaseButton.module.scss
+++ b/src/Button/BaseButton.module.scss
@@ -4,6 +4,7 @@
   border-radius: var(--button-border-radius);
   font-size: var(--button-font-size);
   line-height: var(--button-font-size);
+  margin: 0;
   padding: 10px 15px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
